re PR tree-optimization/63380 (Wrong constant folding)

2014-10-10  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/63380
	* tree-ssa-tail-merge.c (stmt_local_def): Exclude stmts that
	may trap.

	* gcc.dg/torture/pr63380-1.c: New testcase.
	* gcc.dg/torture/pr63380-2.c: Likewise.

From-SVN: r216066